--- a/railway.toml
+++ b/railway.toml
@@ -6,4 +6,6 @@ buildCommand = "npm run build"
 startCommand = "npm run start"
 healthcheckPath = "/"
 healthcheckTimeout = 100
-restartPolicyType = "on-failure"
+restartPolicyType = "ON_FAILURE"
+
+
